# pure-coordination

./: README.md  pyproject.toml
.prime/: .env-metadata.json
pure_coordination/: __init__.py  config.py  prompt.py  pure_coordination.py
